// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exceptions throws for unterminated comments 1`] = `"Your styles have an unterminated comment (\\"/*\\" without corresponding \\"*/\\")."`;

exports[`createStyles() adds nonce to style tags: DOM 1`] = `
<style
  data-dash="ui"
  nonce="EDNnf03nceIOfn39fn3e9h3sdfa"
>
  .ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`createStyles() changes container to document.body 1`] = `
<style
  data-dash="ui"
>
  .ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`createStyles() changes key to "css": DOM 1`] = `
<style
  data-dash="css"
>
  .css-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`createStyles() configures hash algorithm 1`] = `"ui-e038ab58"`;

exports[`createStyles() should initialize w/ tokens 1`] = `"width:var(--box-small);height:var(--box-small);"`;

exports[`createStyles() turns off vendor prefixing: DOM 1`] = `
<style
  data-dash="ui"
>
  .ui-1ut9bc3{display:flex;}
</style>
`;

exports[`createStyles() turns on speedy 1`] = `
Object {
  ".ui-1abu38z": Object {
    "0": "display",
    "display": "block",
    "length": 1,
  },
  ".ui-1ut9bc3": Object {
    "0": "display",
    "display": "flex",
    "length": 1,
  },
}
`;

exports[`styles.cls() creates style and inserts it into the dom right away 1`] = `
<style
  data-dash="ui"
>
  .ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`styles.insertGlobal() allows @font-face 1`] = `
<style
  data-dash="ui"
>
  @font-face{font-family:"Open Sans";src:url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"), url("/fonts/OpenSans-Regular-webfont.woff") format("woff");}
</style>
`;

exports[`styles.insertGlobal() allows @import 1`] = `
<style
  data-dash="ui"
>
  @import url("navigation.css");
</style>
`;

exports[`styles.insertGlobal() allows style object 1`] = `
<style
  data-dash="ui"
>
  :root{--foo:bar;}
</style>
`;

exports[`styles.insertGlobal() ejects global styles when callback is called 1`] = `
<style
  data-dash="ui"
>
  html{font-size:100%;}
</style>
`;

exports[`styles.insertGlobal() injects global style object 1`] = `
<style
  data-dash="ui"
>
  html{color:blue;}
</style>
`;

exports[`styles.insertGlobal() injects global style object 2`] = `
<style
  data-dash="ui"
>
  html .foo{color:green;}
</style>
`;

exports[`styles.insertGlobal() passes tokens to global styles 1`] = `
Object {
  "colors": Object {
    "bg": "var(--colors-bg)",
    "blue": "var(--colors-blue)",
    "red": "var(--colors-red)",
    "text": "var(--colors-text)",
  },
}
`;

exports[`styles.insertGlobal() should inject global styles once: :root 1`] = `
<style
  data-dash="ui"
>
  :root{--spacing-0:0;}
</style>
`;

exports[`styles.insertGlobal() should inject global styles once: :root 2`] = `
<style
  data-dash="ui"
>
  :root{--spacing-1:0.5rem;}
</style>
`;

exports[`styles.insertGlobal() should inject global styles once: html 1`] = `
<style
  data-dash="ui"
>
  html{font-size:100%;}
</style>
`;

exports[`styles.insertGlobal() still exists in caches when a global is used more than once but ejected once 1`] = `
<style
  data-dash="ui"
>
  html{font-size:100%;}
</style>
`;

exports[`styles.insertThemes() creates tokens: dark 1`] = `
<style
  data-dash="ui"
>
  .ui-dark-theme{--colors-bg:#000;--colors-text:#fff;}
</style>
`;

exports[`styles.insertThemes() creates tokens: light 1`] = `
<style
  data-dash="ui"
>
  .ui-dark-theme{--colors-bg:#000;--colors-text:#fff;}
</style>
`;

exports[`styles.insertThemes() removes tokens when eject is called 1`] = `
NodeList [
  <style
    data-dash="ui"
  >
    .ui-dark-theme{--colors-bg:#000;--colors-text:#fff;}
  </style>,
  <style
    data-dash="ui"
  >
    .ui-light-theme{--colors-bg:#fff;--colors-text:#000;}
  </style>,
]
`;

exports[`styles.insertTokens() creates tokens w/ scales: :root 1`] = `
<style
  data-dash="ui"
>
  :root{--spacing-0:1rem;--spacing-1:2rem;--spacing-2:4rem;}
</style>
`;

exports[`styles.insertTokens() creates tokens: :root 1`] = `
<style
  data-dash="ui"
>
  :root{--columns:12;--colors-blue:#09a;--colors-red:#c12;--colors-light-red:#c1a;--spacing-xs:1rem;--system-p-md:1rem;--system-p-xs:0.25rem;--system-p-sm:0.5rem;--system-p-lg:2rem;--system-p-xl:4rem;}
</style>
`;

exports[`styles.insertTokens() mangles tokens w/ reserved keys: :root 1`] = `
<style
  data-dash="ui"
>
  :root{--_12hfjng:12;--colors-blue:#09a;--_89k0f7:#c12;--_1mhhw7a:#c1a;--_1qcm7yo:1rem;--_16er4c5:1rem;--_16ql9bx:0.25rem;--yg0a80:0.5rem;--wp1vk5:2rem;--_170kv0w:4rem;}
</style>
`;

exports[`styles.insertTokens() mangles tokens: :root 1`] = `
<style
  data-dash="ui"
>
  :root{--_12hfjng:12;--qqs9ko:#09a;--_89k0f7:#c12;--_1mhhw7a:#c1a;--_1qcm7yo:1rem;--_16er4c5:1rem;--_16ql9bx:0.25rem;--yg0a80:0.5rem;--wp1vk5:2rem;--_170kv0w:4rem;}
</style>
`;

exports[`styles.insertTokens() removes tokens when eject is called 1`] = `
NodeList [
  <style
    data-dash="ui"
  >
    :root{--colors-blue:#09a;--colors-red:#c12;--colors-light-red:#c1a;--spacing-xs:1rem;--system-p-md:1rem;--system-p-xs:0.25rem;--system-p-sm:0.5rem;--system-p-lg:2rem;--system-p-xl:4rem;}
  </style>,
]
`;

exports[`styles.insertTokens() still exists in caches when used more than once 1`] = `
<style
  data-dash="ui"
>
  :root{--colors-blue:#09a;--colors-red:#c12;--colors-light-red:#c1a;--spacing-xs:1rem;--system-p-md:1rem;--system-p-xs:0.25rem;--system-p-sm:0.5rem;--system-p-lg:2rem;--system-p-xl:4rem;}
</style>
`;

exports[`styles.keyframes() adds keyframes to dom: @-webkit-keyframes ui-10r5bpr 1`] = `
<style
  data-dash="ui"
>
  @-webkit-keyframes ui-10r5bpr{0%{opacity:0;}100%{opacity:1;}}
</style>
`;

exports[`styles.keyframes() adds keyframes to dom: @keyframes ui-10r5bpr 1`] = `
<style
  data-dash="ui"
>
  @keyframes ui-10r5bpr{0%{opacity:0;}100%{opacity:1;}}
</style>
`;

exports[`styles.keyframes() returns keyframes name 1`] = `"ui-10r5bpr"`;

exports[`styles.keyframes() works with tokens callback: 0% blue; 100% red; 1`] = `
<style
  data-dash="ui"
>
  @keyframes ui-1ryth4d{0%{background-color:var(--color-blue);}100%{background-color:var(--color-red);}}
</style>
`;

exports[`styles.lazy() creates style and inserts it into the dom lazily: 36px 1`] = `
<style
  data-dash="ui"
>
  .ui-9xjaf3{width:36px;}
</style>
`;

exports[`styles.lazy() creates style and inserts it into the dom lazily: 36px 2`] = `
<style
  data-dash="ui"
>
  .ui-9xjaf3{width:36px;}
</style>
`;

exports[`styles.lazy() creates style and inserts it into the dom lazily: 37px 1`] = `
<style
  data-dash="ui"
>
  .ui-ft3nie{width:37px;}
</style>
`;

exports[`styles.lazy() creates style from serializable values: 36px 1`] = `
<style
  data-dash="ui"
>
  .ui-ft3nie{width:37px;}
</style>
`;

exports[`styles.lazy() creates style from serializable values: 36px 2`] = `
<style
  data-dash="ui"
>
  .ui-ft3nie{width:37px;}
</style>
`;

exports[`styles.one() can be called as a function w/ function value 1`] = `"color: var(--color-blue);"`;

exports[`styles.one() can be called as a function w/ string value 1`] = `"ui-1ut9bc3"`;

exports[`styles.one() creates style w/ object 1`] = `
<style
  data-dash="ui"
>
  .ui-1006qeb{display:block;}
</style>
`;

exports[`styles.one() creates style w/ object 2`] = `
<style
  data-dash="ui"
>
  .ui-1006qeb span{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`styles.one() creates style w/ template literal 1`] = `
<style
  data-dash="ui"
>
  .ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`styles.one() returns css when css() is called 1`] = `
"
      display: flex;
    "
`;

exports[`styles.one() won't create style def if falsy 1`] = `
<style
  data-dash="ui"
>
  .ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`styles.variants() adds dev labels: -flex 1`] = `"ui-1ut9bc3-flex"`;

exports[`styles.variants() adds dev labels: -flex-block 1`] = `"ui-14t38od-flex-block"`;

exports[`styles.variants() adds dev labels: -flex-inline 1`] = `"ui-broszf-flex-inline"`;

exports[`styles.variants() adds styles by order of definition when called: flex, block, inline 1`] = `
<style
  data-dash="ui"
>
  .ui-qaw0al{display:flex;display:block;display:inline;}
</style>
`;

exports[`styles.variants() adds styles by order of definition when called: flex, block, inline 2`] = `
<style
  data-dash="ui"
>
  .ui-qaw0al{display:flex;display:block;display:inline;}
</style>
`;

exports[`styles.variants() allows comments 1`] = `
"
        /* this is a flex style */
        display: flex;
      "
`;

exports[`styles.variants() allows default styles 1`] = `
NodeList [
  <style
    data-dash="ui"
  >
    .ui-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </style>,
]
`;

exports[`styles.variants() allows full capabilities w/ style objects 1`] = `
<style
  data-dash="ui"
>
  .ui-7a9ovz{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`styles.variants() allows full capabilities w/ style objects 2`] = `
<style
  data-dash="ui"
>
  .ui-7a9ovz.foo{display:block;}
</style>
`;

exports[`styles.variants() allows unitless object values: 200x200 1`] = `
<style
  data-dash="ui"
>
  .ui-haiabg{width:200px;height:200px;}
</style>
`;

exports[`styles.variants() has a default style that is always applied first 1`] = `
NodeList [
  <style
    data-dash="ui"
  >
    .ui-14t38od{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;display:block;}
  </style>,
]
`;

exports[`styles.variants() joins css styles and returns class name 1`] = `"ui-14t38od"`;

exports[`styles.variants() joins css styles and returns class name: display:flex;display:block; 1`] = `
<style
  data-dash="ui"
>
  .ui-14t38od{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;display:block;}
</style>
`;

exports[`styles.variants() passes tokens to style callbacks 1`] = `
Object {
  "colors": Object {
    "bg": "var(--colors-bg)",
    "lightSpecific": "var(--colors-light-specific)",
    "text": "var(--colors-text)",
  },
}
`;

exports[`styles.variants() passes tokens to style callbacks 2`] = `"ui-dark-theme"`;

exports[`styles.variants() passes tokens to style callbacks 3`] = `"ui-light-theme"`;

exports[`styles.variants() replaces disallowed characters in dev labels: 400x400 1`] = `
<style
  data-dash="ui"
>
  .ui-49mne8-box-big{width:400px;height:400px;}
</style>
`;

exports[`styles.variants() returns css styles 1`] = `"display:flex;"`;

exports[`styles.variants() returns css styles 2`] = `"display:flex;display:block;display: inline;"`;

exports[`styles.variants() returns css styles 3`] = `"display:flex;display: inline;"`;

exports[`styles.variants() returns single class name 1`] = `"ui-1ut9bc3"`;

exports[`styles.variants() returns single class name 2`] = `"ui-qaw0al"`;

exports[`styles.variants() returns single class name 3`] = `"ui-broszf"`;
